--- a/anvil-portal/pom.xml
+++ b/anvil-portal/pom.xml
@@ -7,4 +7,19 @@
   </parent>
   <artifactId>anvil-portal</artifactId>
   <packaging>war</packaging>
+  
+  <dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+        </dependency>
+	</dependencies>
 </project>
