--- a/anvil-portal/src/main/resources/config/application.properties
+++ b/anvil-portal/src/main/resources/config/application.properties
@@ -16,6 +16,8 @@ mybatis.mapperLocations=classpath:mappers/**/*.xml
 mybatis.type-aliases-package=com.godman.anvil.domain
 mybatis.configuration.map-underscore-to-camel-case=true
 
+logging.level.com.godman.anvil.dao=debug
+
 #jwt
 jwt.header:Authorization
 jwt.secret:ZY31G94M
