auth token refresh

--- a/anvil-portal/src/main/resources/config/application.properties
+++ b/anvil-portal/src/main/resources/config/application.properties
@@ -22,7 +22,7 @@ logging.level.com.godman.anvil.dao=debug
 jwt.header:Authorization
 jwt.secret:ZY31G94M
 jwt.expiration:20
-jwt.tokenHead:Bearer
+jwt.refreshallow:60
 jwt.route.authentication.path:auth/login
 jwt.route.authentication.refresh:auth/refresh
 jwt.route.authentication.register:"auth/register"
