--- a/anvil-web/.babelrc
+++ b/anvil-web/.babelrc
@@ -1,6 +1,15 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "presets": [
+    [
+      "@babel/env",
+      {
+        "modules": false
+      }
+    ],
+    "@babel/react"
+  ],
   "plugins": [
+    ["import", { "libraryName": "antd", "style": "css" }],
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-optional-chaining"
