--- a/anvil-web/package.json
+++ b/anvil-web/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.7.7",
     "nprogress": "^0.2.0",
     "react": "^16.6.3",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
     "react-loadable": "^5.5.0",
@@ -52,9 +53,12 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.10.0",
     "ora": "^3.0.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.4.0",
     "react-dev-utils": "^6.1.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
