--- a/anvil-web/package.json
+++ b/anvil-web/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "connected-react-router": "^5.0.1",
     "dayjs": "^1.7.7",
+    "invariant": "^2.2.4",
     "nprogress": "^0.2.0",
     "react": "^16.6.3",
     "react-document-title": "^2.0.3",
@@ -29,7 +30,8 @@
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
