--- a/anvil-web/package.json
+++ b/anvil-web/package.json
@@ -16,11 +16,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^1.1.16",
     "antd": "^3.11.0",
     "axios": "^0.18.0",
     "connected-react-router": "^5.0.1",
     "dayjs": "^1.7.7",
     "invariant": "^2.2.4",
+    "lodash": "^4.17.11",
     "nprogress": "^0.2.0",
     "react": "^16.6.3",
     "react-document-title": "^2.0.3",
@@ -57,13 +59,16 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.10.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "ora": "^3.0.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.4.0",
+    "postcss-safe-parser": "^4.0.1",
     "react-dev-utils": "^6.1.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
