--- a/anvil-web/package.json
+++ b/anvil-web/package.json
@@ -34,6 +34,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.2"
   },
   "devDependencies": {
