add the sentry add the sever config update the babel config

--- a/anvil-web/package.json
+++ b/anvil-web/package.json
@@ -17,11 +17,16 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^1.1.16",
+    "@babel/register": "^7.0.0",
+    "@sentry/browser": "^4.5.1",
     "antd": "^3.11.0",
     "axios": "^0.18.0",
     "connected-react-router": "^5.0.1",
     "dayjs": "^1.7.7",
+    "http-proxy": "^1.17.0",
     "invariant": "^2.2.4",
+    "koa": "^2.6.2",
+    "koa-static": "^5.0.0",
     "lodash": "^4.17.11",
     "nprogress": "^0.2.0",
     "qs": "^6.6.0",
