--- a/anvil-web/.babelrc
+++ b/anvil-web/.babelrc
@@ -3,7 +3,7 @@
     [
       "@babel/env",
       {
-        "modules": false
+        "modules": "false",
       }
     ],
     "@babel/react"
@@ -17,6 +17,6 @@
     ],
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-optional-chaining"
+    "@babel/plugin-proposal-optional-chaining",
   ]
 }
