--- a/anvil-portal/pom.xml
+++ b/anvil-portal/pom.xml
@@ -41,6 +41,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 		</dependency>
+		<dependency>
+	       <groupId>com.getsentry.raven</groupId>
+	       <artifactId>raven-logback</artifactId>
+	       <version>8.0.2</version>
+	   </dependency>
 	</dependencies>
 	
 	<build>
