add the detail logs

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,5 +34,6 @@ deploy:
   local-dir: anvil-web/dist
   project-name: Anvil
   target-branch: deploy
+  verbose: true
   on:
     all_branches: true
