--- a/anvil-web/package.json
+++ b/anvil-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anvil-web",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Cluster management framework",
   "main": "webpack.config.js",
   "scripts": {
@@ -18,45 +18,46 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^1.1.16",
-    "@sentry/browser": "^4.5.1",
-    "antd": "^3.11.0",
+    "@sentry/browser": "^4.6.1",
+    "antd": "^3.13.2",
     "axios": "^0.18.0",
     "connected-react-router": "^5.0.1",
-    "dayjs": "^1.7.7",
+    "dayjs": "^1.8.6",
     "invariant": "^2.2.4",
     "lodash": "^4.17.11",
     "nprogress": "^0.2.0",
     "qs": "^6.6.0",
-    "react": "^16.6.3",
+    "react": "^16.8.2",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.6.3",
-    "react-hot-loader": "^4.3.12",
+    "react-dom": "^16.8.2",
+    "react-hot-loader": "^4.6.5",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
+    "redux-persist-transform-encrypt": "^2.0.1",
     "redux-saga": "^0.16.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.4.1",
+    "autoprefixer": "^9.4.7",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
     "chalk": "^2.4.2",
-    "chokidar": "^2.0.4",
+    "chokidar": "^2.1.1",
     "css-loader": "^1.0.1",
-    "eslint": "^5.9.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint": "^5.14.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^7.0.1",
@@ -65,20 +66,21 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "ora": "^3.0.0",
+    "ora": "^3.1.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.4.0",
+    "postcss-preset-env": "^6.5.0",
     "postcss-safe-parser": "^4.0.1",
     "react-dev-utils": "^6.1.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "sw-precache-webpack-plugin": "^0.11.5",
-    "uglifyjs-webpack-plugin": "^2.0.1",
+    "terser-webpack-plugin": "^1.2.2",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.26.1",
+    "webpack": "^4.29.4",
     "webpack-dev-server": "^3.1.14",
     "webpack-manifest-plugin": "^2.0.4"
   }
