--- a/anvil-web/package.json
+++ b/anvil-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anvil-web",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Cluster management framework",
   "main": "webpack.config.js",
   "scripts": {
@@ -54,6 +54,7 @@
     "babel-plugin-import": "^1.11.0",
     "chalk": "^2.4.2",
     "chokidar": "^2.1.1",
+    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^1.0.1",
     "eslint": "^5.14.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
