--- a/anvil-portal/src/main/resources/config/application-local.properties
+++ b/anvil-portal/src/main/resources/config/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/anvil_service?useUnicode=true&amp;characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/anvil_service?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
 
