[web] update the layouts style. update the person-center update version to the alpha.6

--- a/anvil-web/jsconfig.json
+++ b/anvil-web/jsconfig.json
@@ -11,7 +11,7 @@
       "config/*": ["./src/config/*"],
       "components/*": ["./src/components/*"],
       "services/*": ["./src/services/*"],
-      "utils/*": ["./src/utils/*"]
+      "utils/*": ["./src/utils/*"],
     }
   },
   "exclude": ["node_modules"],
