--- a/anvil-web/jsconfig.json
+++ b/anvil-web/jsconfig.json
@@ -7,11 +7,12 @@
     "isolatedModules": true,
     "baseUrl": "./",
     "paths": {
-      "src/*": ["./src/*"],
       "config/*": ["./src/config/*"],
       "components/*": ["./src/components/*"],
       "services/*": ["./src/services/*"],
       "utils/*": ["./src/utils/*"],
+      "assets/*": ["./src/assets/*"],
+      "src/*": ["./src/*"]
     }
   },
   "exclude": ["node_modules"],
