--- a/anvil-web/package.json
+++ b/anvil-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anvil-web",
-  "version": "0.1.5-beta.7",
+  "version": "0.1.6",
   "description": "Cluster management framework",
   "main": "webpack.config.js",
   "scripts": {
